--- a/integration/src/main/resources/filesIntegration.properties
+++ b/integration/src/main/resources/filesIntegration.properties
@@ -1,5 +1,6 @@
-directory.path.base=D:/si
-directory.path.input=${directory.base}/source
-directory.path.output=${directory.base}/processing
-
-file.regexp=((LIA_products_)(Marks|Lequipeur)_([0-9]{4})(0[1-9]|1[0-2])(0[1-9]|[1-2][0-9]|3[0-1])((0[1-9]|[0-9][0-9])|())(.csv))
+path.base=D:/si
+path.source=${path.base}/source
+path.processing=${path.base}/processing
+path.complete=${path.base}/complete
+path.error=${path.base}/error
+path.regexp=((LIA_products_)(Marks|Lequipeur)(.csv))
