--- a/integration/pom.xml
+++ b/integration/pom.xml
@@ -39,6 +39,11 @@
             <artifactId>spring-boot-configuration-processor</artifactId>
             <optional>true</optional>
         </dependency>
+        <dependency>
+            <groupId>com.google.guava</groupId>
+            <artifactId>guava</artifactId>
+            <version>22.0</version>
+        </dependency>
 
         <dependency>
             <groupId>org.springframework.boot</groupId>
