--- a/rest-client/.gitignore
+++ b/rest-client/.gitignore
@@ -137,3 +137,4 @@ gradle-app.setting
 # gradle/wrapper/gradle-wrapper.properties
 
 # End of https://www.gitignore.io/api/java,linux,gradle,windows,intellij+iml
+/.idea/
