--- a/booking/src/main/resources/META-INF/spring/hibernate.properties
+++ b/booking/src/main/resources/META-INF/spring/hibernate.properties
@@ -3,4 +3,4 @@ hibernate.max_fetch_depth=3
 hibernate.jdbc.fetch_size=50
 hibernate.jdbc.batch_size=lO
 hibernate.show_sql=true
-hibernate.hbm2ddl.auto=create
+hibernate.hbm2ddl.auto=update
