--- a/booking/src/main/resources/META-INF/spring/database.properties
+++ b/booking/src/main/resources/META-INF/spring/database.properties
@@ -1,4 +1,4 @@
-jdbc.username=registry
-jdbc.password=RDjxSU984bzdysfn
-jdbc.url=jdbc:mysql://localhost:3306/declaration-registry
+jdbc.username=spring_soap
+jdbc.password=spring_soap
+jdbc.url=jdbc:mysql://localhost:3306/spring_soap
 jdbc.driver=com.mysql.jdbc.Driver
