--- a/booking/pom.xml
+++ b/booking/pom.xml
@@ -37,6 +37,12 @@
         <!--Jackson-->
         <jackson.version>2.9.0.pr4</jackson.version>
 
+        <!-- Web dependencies -->
+        <webjars-bootstrap.version>4.0.0-alpha.6-1</webjars-bootstrap.version>
+        <webjars-jquery-ui.version>1.12.1</webjars-jquery-ui.version>
+        <webjars-jquery.version>3.2.1</webjars-jquery.version>
+        <wro4j.version>1.8.0</wro4j.version>
+
         <!-- Other -->
         <guava.version>22.0</guava.version>
         <lombok.version>1.16.16</lombok.version>
@@ -151,6 +157,24 @@
             <version>${jackson.version}</version>
         </dependency>
 
+        <!-- Webjars -->
+        <dependency>
+            <groupId>org.webjars</groupId>
+            <artifactId>jquery</artifactId>
+            <version>${webjars-jquery.version}</version>
+        </dependency>
+        <dependency>
+            <groupId>org.webjars</groupId>
+            <artifactId>jquery-ui</artifactId>
+            <version>${webjars-jquery-ui.version}</version>
+        </dependency>
+        <dependency>
+            <groupId>org.webjars</groupId>
+            <artifactId>bootstrap</artifactId>
+            <version>${webjars-bootstrap.version}</version>
+        </dependency>
+
+
         <!-- Other -->
         <dependency>
             <groupId>com.google.guava</groupId>
@@ -216,6 +240,34 @@
                 <groupId>org.apache.maven.plugins</groupId>
                 <artifactId>maven-war-plugin</artifactId>
                 <version>2.1.1</version>
+            </plugin>
+
+            <plugin>
+                <groupId>ro.isdc.wro4j</groupId>
+                <artifactId>wro4j-maven-plugin</artifactId>
+                <version>${wro4j.version}</version>
+                <executions>
+                    <execution>
+                        <phase>generate-resources</phase>
+                        <goals>
+                            <goal>run</goal>
+                        </goals>
+                    </execution>
+                </executions>
+                <configuration>
+                    <wroManagerFactory>ro.isdc.wro.maven.plugin.manager.factory.ConfigurableWroManagerFactory</wroManagerFactory>
+                    <cssDestinationFolder>${project.build.directory}/petclinic/resources/css</cssDestinationFolder>
+                    <wroFile>${basedir}/src/main/resources/META-INF/wro/wro.xml</wroFile>
+                    <extraConfigFile>${basedir}/src/main/resources/META-INF/wro/wro.properties</extraConfigFile>
+                    <contextFolder>${basedir}/src/main/webapp/resources/sass</contextFolder>
+                </configuration>
+                <dependencies>
+                    <dependency>
+                        <groupId>org.webjars</groupId>
+                        <artifactId>bootstrap</artifactId>
+                        <version>${webjars-bootstrap.version}</version>
+                    </dependency>
+                </dependencies>
             </plugin>
 
             <!-- TODO: configure server -->
