--- a/booking/src/main/resources/META-INF/wro/wro.properties
+++ b/booking/src/main/resources/META-INF/wro/wro.properties
@@ -5,9 +5,9 @@ disableCache=false
 gzipResources=true
 ignoreMissingResources=false
 jmxEnabled=true
+managerFactoryClassName=ro.isdc.wro.manager.factory.ConfigurableWroManagerFactory
 encoding=UTF-8
 
 uriLocators=servletContext
-
 preProcessors=cssUrlRewriting, cssImport, semicolonAppender
 postProcessors=rubySassCss, cssMin
