--- a/booking/pom.xml
+++ b/booking/pom.xml
@@ -43,10 +43,12 @@
         <webjars-jquery.version>3.2.1</webjars-jquery.version>
         <wro4j.version>1.8.0</wro4j.version>
 
+        <!-- Lombok -->
+        <lombok.version>1.16.16</lombok.version>
+        <!--<lombok.plugin.version>1.16.16.0</lombok.plugin.version>-->
+
         <!-- Other -->
         <guava.version>22.0</guava.version>
-        <lombok.version>1.16.16</lombok.version>
-        <lombok.plugin.version>1.16.16.0</lombok.plugin.version>
         <mapper.version>0.7.5</mapper.version>
         <joda.version>2.9.9</joda.version>
     </properties>
@@ -174,18 +176,19 @@
             <version>${webjars-bootstrap.version}</version>
         </dependency>
 
+        <!-- Lombok -->
+        <dependency>
+            <groupId>org.projectlombok</groupId>
+            <artifactId>lombok</artifactId>
+            <version>1.16.16</version>
+            <scope>provided</scope>
+        </dependency>
 
         <!-- Other -->
         <dependency>
             <groupId>com.google.guava</groupId>
             <artifactId>guava</artifactId>
             <version>${guava.version}</version>
-        </dependency>
-        <dependency>
-            <groupId>org.projectlombok</groupId>
-            <artifactId>lombok</artifactId>
-            <version>1.16.16</version>
-            <scope>provided</scope>
         </dependency>
         <dependency>
             <groupId>org.modelmapper</groupId>
@@ -256,12 +259,23 @@
                 </executions>
                 <configuration>
                     <wroManagerFactory>ro.isdc.wro.maven.plugin.manager.factory.ConfigurableWroManagerFactory</wroManagerFactory>
-                    <cssDestinationFolder>${project.build.directory}/petclinic/resources/css</cssDestinationFolder>
+                    <cssDestinationFolder>${project.build.directory}/${project.name}/resources/css</cssDestinationFolder>
+                    <jsDestinationFolder>${project.build.directory}/${project.name}/resources/js</jsDestinationFolder>
                     <wroFile>${basedir}/src/main/resources/META-INF/wro/wro.xml</wroFile>
                     <extraConfigFile>${basedir}/src/main/resources/META-INF/wro/wro.properties</extraConfigFile>
-                    <contextFolder>${basedir}/src/main/webapp/resources/sass</contextFolder>
+                    <contextFolder>${basedir}/src/main/webapp/resources/themes/default/sass</contextFolder>
                 </configuration>
                 <dependencies>
+                    <dependency>
+                        <groupId>org.webjars</groupId>
+                        <artifactId>jquery</artifactId>
+                        <version>${webjars-jquery.version}</version>
+                    </dependency>
+                    <dependency>
+                        <groupId>org.webjars</groupId>
+                        <artifactId>jquery-ui</artifactId>
+                        <version>${webjars-jquery-ui.version}</version>
+                    </dependency>
                     <dependency>
                         <groupId>org.webjars</groupId>
                         <artifactId>bootstrap</artifactId>
@@ -282,12 +296,6 @@
                     <username>tomcat</username>
                     <password>tomcat</password>
                 </configuration>
-            </plugin>
-
-            <plugin>
-                <groupId>org.projectlombok</groupId>
-                <artifactId>lombok-maven</artifactId>
-                <version>${lombok.plugin.version}</version>
             </plugin>
         </plugins>
     </build>
