--- a/booking/src/main/webapp/WEB-INF/web.xml
+++ b/booking/src/main/webapp/WEB-INF/web.xml
@@ -1,10 +1,6 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <web-app xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xmlns="http://java.sun.com/xml/ns/javaee" xsi:schemaLocation="http://java.sun.com/xml/ns/javaee http://java.sun.com/xml/ns/javaee/web-app_3_0.xsd" version="3.0">
-    <display-name>Registry</display-name>
-
-    <welcome-file-list>
-        <welcome-file>index.jsp</welcome-file>
-    </welcome-file-list>
+    <display-name>Booking</display-name>
 
     <context-param>
         <param-name>contextConfigLocation</param-name>
@@ -40,8 +36,7 @@
     </servlet>
     <servlet-mapping>
         <servlet-name>mvc</servlet-name>
-        <url-pattern>/site/*</url-pattern>
-        <url-pattern>*.html</url-pattern>
+        <url-pattern>/*</url-pattern>
     </servlet-mapping>
 
 </web-app>
