--- a/booking/src/main/resources/META-INF/wro/wro.properties
+++ b/booking/src/main/resources/META-INF/wro/wro.properties
@@ -8,6 +8,6 @@ jmxEnabled=true
 managerFactoryClassName=ro.isdc.wro.manager.factory.ConfigurableWroManagerFactory
 encoding=UTF-8
 
-uriLocators=servletContext
+uriLocators=webjars,servletContext,uri,classpath
 preProcessors=cssUrlRewriting, cssImport, semicolonAppender
-postProcessors=rubySassCss, cssMin
+postProcessors=rubySassCss, cssMin, jsMin
