--- a/soap-client/.gitignore
+++ b/soap-client/.gitignore
@@ -1,39 +1,12 @@
-target/
-!.mvn/wrapper/maven-wrapper.jar
 
-### STS ###
-.apt_generated
-.classpath
-.factorypath
-.project
-.settings
-.springBeans
-
-### IntelliJ IDEA ###
-.idea
-*.iws
-*.iml
-*.ipr
-
-### NetBeans ###
-nbproject/private/
-build/
-nbbuild/
-dist/
-nbdist/
-.nb-gradle/
-/mvnw.cmd
-/mvnw
-/.mvn/
-
-
-# Created by https://www.gitignore.io/api/java,linux,windows,intellij+iml
+# Created by https://www.gitignore.io/api/java,linux,gradle,windows,intellij+iml
 
 ### Intellij+iml ###
 # Covers JetBrains IDEs: IntelliJ, RubyMine, PhpStorm, AppCode, PyCharm, CLion, Android Studio and Webstorm
 # Reference: https://intellij-support.jetbrains.com/hc/en-us/articles/206544839
 
 # User-specific stuff:
+.idea/**/workspace.xml
 .idea/**/tasks.xml
 .idea/dictionaries
 
@@ -44,6 +17,8 @@ nbdist/
 .idea/**/dataSources.local.xml
 .idea/**/sqlDataSources.xml
 .idea/**/dynamic.xml
+.idea/**/uiDesigner.xml
+
 # Gradle:
 .idea/**/gradle.xml
 .idea/**/libraries
@@ -53,6 +28,9 @@ cmake-build-debug/
 
 # Mongo Explorer plugin:
 .idea/**/mongoSettings.xml
+
+## File-based project format:
+*.iws
 
 ## Plugin-specific files:
 
@@ -76,6 +54,11 @@ fabric.properties
 
 ### Intellij+iml Patch ###
 # Reason: https://github.com/joeblau/gitignore.io/issues/186#issuecomment-249601023
+
+*.iml
+modules.xml
+.idea/misc.xml
+*.ipr
 
 ### Java ###
 # Compiled class file
@@ -137,12 +120,22 @@ $RECYCLE.BIN/
 # Windows shortcuts
 *.lnk
 
-# End of https://www.gitignore.io/api/java,linux,windows,intellij+iml
-/src/main/java/ws/namespace/service/
-/service-datatypes.xsd
-!/service-dto.xsd
-/src/main/ws/
-/src/main/jaxb/
+### Gradle ###
+.gradle
+/build/
+
+# Ignore Gradle GUI config
+gradle-app.setting
+
+# Avoid ignoring Gradle wrapper jar file (.jar files are usually ignored)
+!gradle-wrapper.jar
+
+# Cache of project
+.gradletasknamecache
+
+# # Work around https://youtrack.jetbrains.com/issue/IDEA-116898
+# gradle/wrapper/gradle-wrapper.properties
+
+# End of https://www.gitignore.io/api/java,linux,gradle,windows,intellij+iml
 /.idea/
-/target/
-/soap-service.iml
+/soap-client.iml
